--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+astroid==2.3.3
 certifi==2019.11.28
+Click==7.0
+colorama==0.4.3
+Flask==1.1.1
+Flask-Cors==3.0.8
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
 pycryptodome==3.8.2
+pylint==2.4.4
+six==1.13.0
+Werkzeug==0.16.0
 wincertstore==0.2
+wrapt==1.11.2
