Added Peer Nodes & Broadcasting: * Manually add peer nodes in the network * Broadcast added transactions to other nodes * Broadcast mined block to other peer nodes * UI to add/delete/display peer nodes

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Project excludes
 blockchain_store.*
 wallet_store.*
+*_store.*
+*.store.*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
