--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
+asn1crypto==1.3.0
 astroid==2.3.3
 certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
 Click==7.0
 colorama==0.4.3
+cryptography==2.8
 Flask==1.1.1
 Flask-Cors==3.0.8
+idna==2.8
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pycparser==2.19
 pycryptodome==3.8.2
 pylint==2.4.4
+pyOpenSSL==19.1.0
+PySocks==1.7.1
+requests==2.22.0
 six==1.13.0
+urllib3==1.25.7
 Werkzeug==0.16.0
+win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.11.2
+yapf==0.28.0
